--- a/app/views/layouts/main-layout.jade
+++ b/app/views/layouts/main-layout.jade
@@ -8,6 +8,7 @@ html(lang='en')
             include _css
 
             include _ico
+            include _ie9
             include _head
             include _message
 
