--- a/app/views/layouts/review-layout.jade
+++ b/app/views/layouts/review-layout.jade
@@ -9,6 +9,7 @@ html(lang='en')
 
             include _ico
             include _logo
+            include _ie9
             include _message
 
             div.container.min-height
