--- a/app/views/layouts/logo-layout.jade
+++ b/app/views/layouts/logo-layout.jade
@@ -9,6 +9,7 @@ html(lang='en')
 
             include _ico
             include _logo
+            include _ie9
 
             div.container.min-container
                 block content
