change css global font and less than ie9 tip

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -1,9 +1,11 @@
+@charset "utf-8";
 
 /**global var**/
+/** Helvetica, Tahoma, Arial, \5b8b\4f53, sans-serif; **/
 @min-height:500px;
 @z-index:10000;
-@global-font-family:tahoma,sans-serif;
-@global-font-size: 13px;
+@global-font-family:"Microsoft YaHei","微软雅黑",Tahoma, Arial,"Helvetica Neue", Helvetica,sans-serif,"宋体",;
+@global-font-size: 14px;
 
 /**global settings**/
 .global-font{
