--- a/app/views/layouts/_ie9.jade
+++ b/app/views/layouts/_ie9.jade
@@ -1,12 +1,15 @@
 <!--[if lt IE 9 ]>
-div(class='container-fluid alert alert-danger')
+div(class='container alert alert-danger')
     div(class='row-fluid')
-        div(class='span8 offset2')
+        div(class='span12')
             div
-                h4 Warning!
-                | Please note that this OVP demo (only this demo) no longer supports Internet Explorer versions 6 7 or 8
-                | and we can not assure it will work fine for IE6,7,8.
-                | We recommend upgrading to the latest Internet Explorer, Google Chrome, or Firefox.
-                | If you are using IE 9 or later, make sure you turn off "Compatibility View".
+                h4 注意!
+                br
+                p
+                    | 本站将不再提供对IE 6，7，8 及6以下版本的支持，
+                    | 同时也不能保证本站点内容可以很好的运行在 IE6，7，8，及6以下版本上。
+                    | 我们强烈的推荐您使用最新的IE浏览器或者google chrome 浏览器，或者firefox 浏览器浏览本站内容。
+                    | 如果您正在使用IE9 或 IE最新版本，确保关闭IE兼容性视图
+
 
 <![endif]-->
