fix requirejs load js failed

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -20,3 +20,4 @@ block content
                 h4.title 相关信息
 
         script(data-main='/javascripts/app/home.js',src='/javascripts/require.js')
+        script(src='/javascripts/app/requirejs-config.js')
