--- a/app/views/layouts/_js.jade
+++ b/app/views/layouts/_js.jade
@@ -1,6 +1,6 @@
 
 script(data-main='/javascripts/app/application.js',src='/javascripts/require-jquery.js')
-script(src="/javascripts/app/requirejs-config.js")
+script(src='/javascripts/app/requirejs-config.js')
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
