change site name, add user rank

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -77,18 +77,28 @@ body {
 .marketing-byline{
   .grey-font;
 }
+
+.rank-author-line{
+  margin-bottom: 5px;
+}
+
+.rank-author{
+  padding-top: 10px;
+}
 .relative{
+
   h4{
     .text-center
   }
-  min-height: @min-height;
-  border: 1px solid;
   .rounded-corners
 }
 .face-thumbnails{
   width: 40px;
   height: 40px;
 }
+
+
+
 
 /**one post**/
 
