--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -36,7 +36,7 @@ block content
                         div.span12
                             div.row-fluid
                                 div(class='span1')
-                                    img(class='img-polaroid img-rounded face-thumbnails',src='/img/noavatar92.png')
+                                    img(class='img-polaroid img-rounded face-thumbnails',src='/images/noavatar92.png')
                                 div(class='span11')
                                     form(action='/comment',method='post')
                                         div.control-group
