--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -6,12 +6,12 @@ block content
     body
         div.row-fluid
             div.span2
-                img(src='#{user.normalFace}',class='img-polaroid img-rounded')
+                img(src='#{discoverior.normalFace}',class='img-polaroid img-rounded')
                 p
-                p 我的名字： #{user.name}
-                p 注册时间： #{user.regTimeStr}
-                p @年龄： #{user.flyAge}
-                p 邮箱： #{user.email}
+                p 我的名字： #{discoverior.name}
+                p 注册时间： #{discoverior.regTimeStr}
+                p @年龄： #{discoverior.flyAge}
+                p 邮箱： #{discoverior.email}
 
 
 
