--- a/app/views/layouts/_meta.jade
+++ b/app/views/layouts/_meta.jade
@@ -1,2 +1,3 @@
 meta(charset='utf-8')
 meta(content='width=device-width, initial-scale=1.0', name='viewport')
+meta(property='wb:webmaster',content="78e9f2e1c609997f")
