--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -1,11 +1,11 @@
 div.navbar.navbar-inverse.navbar-fixed-top
     div.navbar-inner
         div.container
-            a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
+            a(class='btn btn-navbar', data-toggle='collapse', data-target='.nav-collapse')
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.brand(href='/') @发现
+            a(class='brand',href='/') @发现
             div.nav-collapse.collapse
                 ul.nav
 
