--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,6 +10,10 @@
   padding-top: 60px;
   padding-bottom: 40px;
 }
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+}
 /**utilies css for other**/
 .text-center {
   text-align: center;
