--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -66,19 +66,13 @@ body {
 }
 
 /**home page cess**/
+.icon-margin-top{
+  margin-top: 3px;
+}
 .up-down-cover{
   position: absolute;
   text-align: center;
   color: #cc0000;
-}
-.login-bar{
-  vertical-align: baseline;
-  position: relative;
-  padding: 10px 20px;
-}
-.height-auto{
-  height: auto !important;
-  line-height: 20px;
 }
 
 .marketing-byline{
