--- a/app/views/layouts/_logo.jade
+++ b/app/views/layouts/_logo.jade
@@ -5,6 +5,6 @@ div.navbar.navbar-inverse.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.brand(href='/') @发现
+            a.brand(href='/') @_@ 发现
 
 
