1. add eys.ico 2. remove unused head.jade 3. change redis directory

--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -12,12 +12,12 @@ div.navbar.navbar-inverse.navbar-fixed-top
                     if(typeof(currentLink) !== 'undefined' && currentLink === 'HOME')
                         li.active
 
-                            a(class='align-base', href='/')
+                            a(href='/')
                                 i.icon-home.icon-white.icon-margin-top
                                 | &nbsp;主页
                     else
                         li
-                            a(class='align-base',href='/')
+                            a(href='/')
 
                                 i.icon-home.icon-margin-top
                                 | &nbsp;主页
