--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -14,36 +14,40 @@ div.navbar.navbar-inverse.navbar-fixed-top
 
                             a(href='/')
                                 i.icon-home.icon-white.icon-margin-top
-                                | &nbsp;主页
+                                strong &nbsp;主页
                     else
                         li
                             a(href='/')
 
                                 i.icon-home.icon-margin-top
-                                | &nbsp;主页
+                                strong &nbsp;主页
                     if(typeof(currentLink) !== 'undefined' && currentLink === 'REVIEW')
                         li.active
                             a(href='/review')
                                 i.icon-filter.icon-white.icon-margin-top
-                                | &nbsp;审阅
+                                strong &nbsp;审阅
                     else
                         li
                             a(href='/review')
                                 i.icon-filter.icon-margin-top
-                                | &nbsp;审阅
+                                strong &nbsp;审阅
 
                 ul.nav.pull-right
                     if typeof(user) === 'undefined' || user === null || user === ''
 
                         li
-                            a(href='/login') [登录]
+
+                            a(href='/login')
+                                i.icon-signin
+                                | [登录]
+
                         li
-                            a(href='/reg') [注册]
+                            a(class='btn-link',href='/reg') [注册]
                     else
                         li.dropdown
                             a(class='dropdown-toggle', href='#', data-toggle='dropdown')
                                 img(src='#{user.mini}',class='img-rounded')
-                                | &nbsp;&nbsp #{user.name}
+                                | &nbsp;&nbsp; #{user.name}
                                 b.caret
                             ul.dropdown-menu
                                 li
