add own one post or not

--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -34,4 +34,4 @@ block content
 
 
         script(data-main='/javascripts/app/user.js',src='/javascripts/require.js')
-
+        script(src='/javascripts/app/requirejs-config.js')
