--- a/app/views/layouts/_css.jade
+++ b/app/views/layouts/_css.jade
@@ -1,3 +1,5 @@
 link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
+link(rel='stylesheet', href='/stylesheets/font-awesome.min.css')
+link(rel='stylesheet', href='/stylesheets/font-awesome-ie7.min.css')
 link(rel='stylesheet', href='/stylesheets/application.css')
