--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -33,7 +33,11 @@ block content
                             div.row-fluid
                                 div.span12
                                     .pull-right
-                                        button(id='#{post._id}',name='del-post-btn',class='btn btn-danger')  删除
+                                        button(name='del-post-btn',data-post-id='#{post._id}',class='btn btn-danger')  删除
+                                form(id='#{post._id}',action='/posts',method='post')
+                                    input(type='hidden',name='_method',value='delete')
+                                    input(type='hidden',name='postId',value='#{post._id}')
+                                    input(type='hidden',name='currentPage',value='#{currentPage}')
                         hr.soft
         div.row-fluid
             div.span12
@@ -43,6 +47,21 @@ block content
                 input(type='hidden',id='current-page',value='#{currentPage}')
                 div(id='pagination-div',class='pagination pagination-right')
 
+        <!-- confirm dialog -->
+        div(id='post-del-confirm',class='modal hide fade')
+            div.modal-header
+                button(type='button',class='close',data-dismiss='modal',aria-hidden='true')
+                    &times;
+                h4 此操作将不可回退
+
+            div.modal-body
+
+                p
+                p.alert.alert-danger 真的要删除文章吗？ 请注意，文章删除后将无法恢复
+
+            div.modal-footer
+                a(id='cancel-del-btn',href='#',class='btn') 取消
+                a(id='confirm-del-btn',href='#',data-post-id='',class='btn btn-danger') 确定
 
         script(data-main='user-blogs',src='/javascripts/require.js')
         script(src='/javascripts/app/requirejs-config.js')
