--- a/app/views/layouts/_js.jade
+++ b/app/views/layouts/_js.jade
@@ -1,5 +1,5 @@
 
-script(data-main='/javascripts/app/application.js',src='/javascripts/require.js')
+script(data-main='application',src='/javascripts/require.js')
 script(src='/javascripts/app/requirejs-config.js')
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
