requirejs migration first time

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -27,5 +27,4 @@ block content
                             div.span10.rank-author
                                 a(href='/users/#{user._id}') #{user.name}
 
-        script(data-main='/javascripts/app/home.js',src='/javascripts/require.js')
-        script(src='/javascripts/app/requirejs-config.js')
+        script(data-main='/javascripts/app/home',src='/javascripts/require.js')
