--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -23,3 +23,5 @@ block content
                         div.control-group
                             div.controls
                                 button(type='submit', class='btn btn-success') 发言
+
+        script(data-main='/javascripts/app/post-article',src='/javascripts/require.js')
