--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -33,5 +33,5 @@ block content
                     span.pull-right 注册
 
 
-        script(data-main='/javascripts/app/user.js',src='/javascripts/require.js')
-        script(src='/javascripts/app/requirejs-config.js')
+        script(data-main='/javascripts/app/user',src='/javascripts/require.js')
+
