--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -44,4 +44,4 @@ block content
                         div.controls
                             button(class='btn btn-primary', type='submit') 提交
 
-
+        script(data-main='/javascripts/app/reg',src='/javascripts/require.js')
