--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -64,7 +64,7 @@ block content
                                     div.span12
                                         !{comment.content}
                         hr
-
+        script(data-main='/javascripts/app/post-show',src='/javascripts/require.js')
 
 
 
