--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -55,4 +55,4 @@ block content
                     div.controls
                         button(class='btn btn-primary', type='submit') 提交
 
-    script(data-main='/javascripts/app/edit-profile.js',src='/javascripts/require.js')
+    script(data-main='/javascripts/app/edit-profile',src='/javascripts/require.js')
