--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -63,5 +63,5 @@ block content
                 a(id='cancel-del-btn',href='#',class='btn') 取消
                 a(id='confirm-del-btn',href='#',data-post-id='',class='btn btn-danger') 确定
 
-        script(data-main='user-blogs',src='/javascripts/require.js')
-        script(src='/javascripts/app/requirejs-config.js')
+        script(data-main='/javascripts/app/user-blogs',src='/javascripts/require.js')
+
