fix phone display margin top

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -19,6 +19,10 @@
   padding-top: 60px;
   padding-bottom: 40px;
 }
+.page-margin{
+  margin-top:60px;
+  margin-bottom:40px;
+}
 .container{
   margin: 0 auto;
   max-width: @max-width;
@@ -51,7 +55,15 @@
 
 /**all page css**/
 .min-container{
+  .page-margin;
   min-height: @min-height;
+}
+
+@media (max-width: 480px) {
+  .min-container{
+    margin-top: 0px;
+    min-height: @min-height;
+  }
 }
 
 .grey-font{
@@ -62,7 +74,7 @@
 }
 body {
   .global-font;
-  .page-padding;
+
 }
 
 /**home page cess**/
