--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -149,8 +149,8 @@ body {
   margin-top: 60px;
 }
 .image-back{
-  background: @grey repeat-x url("/images/laoluo.jpg");
-  width:100%;height:100%;
+  background: @grey repeat url("/images/eye.gif");
+  height: 500px;
 }
 
 .dialog-section{
@@ -239,7 +239,7 @@ body {
     margin-top: 10px;
     height: 30px;
     color: #0A0A0A;
-    
+
     .background-image;
     a{
       color:#04C;
