--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -102,9 +102,8 @@ body {
   margin-top: 60px;
 }
 .image-back {
-  background: #e0e0e0 repeat-x url("/images/laoluo.jpg");
-  width: 100%;
-  height: 100%;
+  background: #e0e0e0 repeat url("/images/eye.gif");
+  height: 500px;
 }
 .dialog-section {
   margin-top: 140px;
