--- a/app/views/layouts/logo-layout.jade
+++ b/app/views/layouts/logo-layout.jade
@@ -8,8 +8,7 @@ html(lang='en')
             include _css
 
             include _ico
-            include _logo
-            include _ie9
+            include _only-logo
 
     div.container.min-container
         block content
