--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -36,6 +36,11 @@ script(type="text/template",id="item-template")
                 <%- creator.name %> 发表于 <%- fromNow %>
 
     hr.soft
+    div.row-fluid
+        div.span12
+
+
+            div(id='pagination-div',class='pagination pagination-right')
 
 
 
