--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -21,25 +21,26 @@ block content
                         label(class='control-label', for='username') 用户名
                         div.controls
 
-                                input(name='username',type='text')
+                                input(name='username',type='text',maxlength='50',required,data-validation-maxlength-message='用户名长度不能超过50个字符！')
 
                     div.control-group
                         label(class='control-label',for='password') 密码
                         div.controls
 
-                                input(name='password',type='password')
+                                input(name='password',type='password',maxlength='50',required,data-validation-maxlength-message='密码长度不能超过50个字符！')
 
                     div.control-group
                         label(class='control-label',for='password-repeat') 密码确认
                         div.controls
 
-                                input(name='password-repeat',type='password')
+                                input(name='password-repeat',type='password',data-validation-match-match='password',data-validation-match-message='两次密码必须一致！')
 
                     div.control-group
                         label(class='control-label',for='email') Email
                         div.controls
 
-                                input(name='email',type='text')
+                                input(name='email',type='email',maxlength='100',required,data-validation-email-message='请输入有效的邮件地址！')
+                                p.help-block
                     div.control-group
                         div.controls
                             button(class='btn btn-primary', type='submit') 提交
