--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -7993,6 +7993,10 @@ a [class^="icon-"],a [class*=" icon-"]{cursor:pointer;}
   padding-top: 60px;
   padding-bottom: 40px;
 }
+.page-margin {
+  margin-top: 60px;
+  margin-bottom: 40px;
+}
 .container {
   margin: 0 auto;
   max-width: 1000px;
@@ -8009,7 +8013,15 @@ a [class^="icon-"],a [class*=" icon-"]{cursor:pointer;}
 }
 /**all page css**/
 .min-container {
+  margin-top: 60px;
+  margin-bottom: 40px;
   min-height: 500px;
+}
+@media (max-width: 760px) {
+  .min-container {
+    margin-top: 0px;
+    min-height: 500px;
+  }
 }
 .grey-font {
   color: #999999;
@@ -8020,8 +8032,6 @@ a [class^="icon-"],a [class*=" icon-"]{cursor:pointer;}
 body {
   font-family: "Microsoft YaHei", "微软雅黑", Tahoma, Arial, "Helvetica Neue", Helvetica, sans-serif, "宋体";
   font-size: 14px;
-  padding-top: 60px;
-  padding-bottom: 40px;
 }
 /**home page cess**/
 .icon-margin-top {
@@ -8075,15 +8085,13 @@ body {
   margin-top: 60px;
 }
 .image-back {
-  background: #e0e0e0 repeat-x url("/images/laoluo.jpg");
-  width: 100%;
-  height: 100%;
+  background: #e0e0e0 repeat url("/images/eye.gif");
+  height: 500px;
 }
 .dialog-section {
   margin-top: 140px;
   text-align: center;
   width: 100%;
-  z-index: 10000;
 }
 .padding-20 {
   padding: 20px 40px 5px 40px;
@@ -8105,7 +8113,6 @@ body {
   text-align: center;
   padding: 20px 40px 5px 40px;
   color: #BFB8E5;
-  border: 1px solid #373553;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #e0e0e0), color-stop(100%, rgba(44, 38, 63, 0.1)));
   background-image: -moz-linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
   background-image: linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
@@ -8115,10 +8122,10 @@ body {
   color: #0A0A0A;
 }
 .dialog form input[type=text] {
-  width: 328px;
+  width: 323px;
 }
 .dialog form input[type=password] {
-  width: 328px;
+  width: 323px;
 }
 .tip {
   border-radius: 5px;
@@ -8143,11 +8150,68 @@ body {
   margin-top: 10px;
   height: 30px;
   color: #0A0A0A;
-  border: 1px solid #373553;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #e0e0e0), color-stop(100%, rgba(44, 38, 63, 0.1)));
   background-image: -moz-linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
   background-image: linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
 }
 .dialog-footer a {
   color: #04C;
+}
+@media (max-width: 760px) {
+  .login-min-padding {
+    padding: 10px 10px 0px 20px;
+  }
+  .dialog {
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    width: 212px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 10px 0px 20px;
+    color: #BFB8E5;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #e0e0e0), color-stop(100%, rgba(44, 38, 63, 0.1)));
+    background-image: -moz-linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
+    background-image: linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
+  }
+  .dialog form {
+    text-align: left;
+    color: #0A0A0A;
+  }
+  .dialog form input[type=text] {
+    width: 182px;
+  }
+  .dialog form input[type=password] {
+    width: 182px;
+  }
+  .dialog-footer {
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    width: 212px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 10px 0px 20px;
+    margin-top: 10px;
+    height: 30px;
+    color: #0A0A0A;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #e0e0e0), color-stop(100%, rgba(44, 38, 63, 0.1)));
+    background-image: -moz-linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
+    background-image: linear-gradient(top, #e0e0e0 0%, rgba(44, 38, 63, 0.1) 100%);
+  }
+  .dialog-footer a {
+    color: #04C;
+  }
+  .tip {
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    width: 212px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px;
+    height: 30px;
+    padding: 10px 10px 1px 10px;
+    display: block;
+  }
 }
